# django-eventbrite

./: README.md  manage.py  pyproject.toml
eventbrite/: asgi.py  settings.py  urls.py  wsgi.py
eventbriteAPI/: apps.py  constants.py  forms.py  urls.py  views.py
eventbriteAPI/templatetags/: get_item.py  parse_iso.py
templates/: base.html  create_event.html  event.html  organizations.html
templates/user/: login.html
user/: models.py  urls.py  views.py
user/migrations/: 0001_initial.py
